fixing some spacing issues in the nav bar + adding wings to nav bar

--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,7 @@ li li {
 
 .navbar-item {
   padding: 0.5rem 1.5rem;
+  margin: 0 0.5rem;
   text-transform: uppercase;
   text-decoration: none;
   color: #8e8e8e;
@@ -118,6 +119,19 @@ li li {
 a.navbar-link,
 .navbar-dropdown-link {
   width: 100%;
+}
+
+nav>ul::before,
+nav>ul::after {
+    background-color: #d0d0d0;
+    content: "";
+    display: inline-block;
+    height: 1px;
+    bottom: .1em;
+    position: relative;
+    vertical-align: middle;
+    display: flex;
+    width: 50%;
 }
 
 .action {
